# grownmansnark

./: Cargo.toml  README.md  baby_snark_no_op.csv
src/: lib.rs
src/finitefield/: euclidean.rs  mod.rs  polynomial.rs
