[package]
name = "grownmansnark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "babysnark"
path = "src/babysnark.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-bigint = "0.4.2"
num-traits = "0.2.14"
num-rational = "0.4.0"
approx = "0.5"